--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,5 +1,37 @@
 @import '../../assets/global.less';
 
-.title {
-  background: rgb(121, 242, 157);
+.page {
+  .container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @videoWidth: 800px;
+    .video-player {
+      width: @videoWidth;
+      height: 500px;
+      .player {
+        width: 100%;
+      }
+      .wave-surfer-container {
+        margin-top: 10px;
+        background: #efeff3;
+        position: relative;
+        .wave-surfer {
+        }
+        .cover {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 9999;
+        }
+      }
+    }
+    .subtitle {
+      width: calc(100% - @videoWidth - 20px);
+    }
+  }
 }
